# blog

./: .env  .gitignore  Cargo.toml  README.md  test.db
front/: Cargo.toml
front/src/: api.rs  main.rs
front/src/ui/: colors.slint  main.slint  sidebar.slint
migration/: .env  Cargo.toml
migration/src/: lib.rs  m20230708_204117_article.rs  m20230708_204117_blog.rs  m20230709_153557_category.rs  m20230709_153603_tag.rs  m20230709_172134_article_category.rs  m20230709_172137_article_tag.rs  m20230714_113351_image.rs  main.rs
src/: error.rs  main.rs  middlewares.rs  prelude.rs  response_error.rs  state.rs  utils.rs
src/apis/: article.rs  article_category.rs  category.rs  mod.rs  panel.rs  tag.rs
src/apis/admin/: mod.rs
src/models/: article.rs  category.rs  category_article.rs  image.rs  mod.rs  prelude.rs  tag.rs  tag_article.rs
src/serializers/: article.rs  category.rs  mod.rs  tag.rs
ui/: index.html  style.css
