[package]
name = "devoid"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0", features = [ "runtime-actix-native-tls", "sqlx-sqlite", "macros", "with-json", "with-time" ] }
actix-web = "4"
migration = { path = "migration" }
dotenvy = "0.15"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
sea-orm = { version = "^0", features = [ "mock" ] }

[workspace]
members = ["migration"]
