[package]
name = "devoid"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0", features = [ "runtime-actix-native-tls", "sqlx-sqlite", "macros", "with-json", "with-time" ] }
actix-web = "4"
migration = { path = "migration" }
dotenvy = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slugify = "0.1"
thiserror = "1.0"
#sqlx = { version = "0.7", features = ["sqlite"] }
env_logger = "0.10"

[dev-dependencies]
#sea-orm = { version = "^0", features = [ "mock" ] }

[workspace]
members = ["migration"]
