[package]
name = "ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
slint-build = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

# [lib]
# path = "src/main.rs"
# crate-type = ["cdylib"]